error
START
make[1]: 'bin/simple1.out' jest aktualne.
./example/simple2.cpp
In file included from /usr/include/c++/5/memory:64:0,
                 from /usr/include/c++/5/thread:40,
                 from ./example/../include/DAL.h:12,
                 from ./example/simple2.cpp:2:
/usr/include/c++/5/bits/stl_construct.h: In instantiation of ‘void std::_Construct(_T1*, _Args&& ...) [with _T1 = DAL::Reference<int>; _Args = {}]’:
/usr/include/c++/5/bits/stl_uninitialized.h:519:18:   required from ‘static _ForwardIterator std::__uninitialized_default_n_1<_TrivialValueType>::__uninit_default_n(_ForwardIterator, _Size) [with _ForwardIterator = DAL::Reference<int>*; _Size = long unsigned int; bool _TrivialValueType = false]’
/usr/include/c++/5/bits/stl_uninitialized.h:575:20:   required from ‘_ForwardIterator std::__uninitialized_default_n(_ForwardIterator, _Size) [with _ForwardIterator = DAL::Reference<int>*; _Size = long unsigned int]’
/usr/include/c++/5/bits/stl_uninitialized.h:637:44:   required from ‘_ForwardIterator std::__uninitialized_default_n_a(_ForwardIterator, _Size, std::allocator<_Tp>&) [with _ForwardIterator = DAL::Reference<int>*; _Size = long unsigned int; _Tp = DAL::Reference<int>]’
/usr/include/c++/5/bits/stl_vector.h:1311:36:   required from ‘void std::vector<_Tp, _Alloc>::_M_default_initialize(std::vector<_Tp, _Alloc>::size_type) [with _Tp = DAL::Reference<int>; _Alloc = std::allocator<DAL::Reference<int> >; std::vector<_Tp, _Alloc>::size_type = long unsigned int]’
/usr/include/c++/5/bits/stl_vector.h:279:30:   required from ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const allocator_type&) [with _Tp = DAL::Reference<int>; _Alloc = std::allocator<DAL::Reference<int> >; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<DAL::Reference<int> >]’
./example/simple2.cpp:11:43:   required from here
/usr/include/c++/5/bits/stl_construct.h:75:7: error: no matching function for call to ‘DAL::Reference<int>::Reference()’
     { ::new(static_cast<void*>(__p)) _T1(std::forward<_Args>(__args)...); }
       ^
In file included from ./example/../include/DAL.h:29:0,
                 from ./example/simple2.cpp:2:
./example/../include/Reference.cpp:22:1: note: candidate: DAL::Reference<Type>::Reference(const DAL::Reference<Type>&) [with Type = int]
 Reference<Type>::Reference(const Reference<Type> & other){
 ^
./example/../include/Reference.cpp:22:1: note:   candidate expects 1 argument, 0 provided
./example/../include/Reference.cpp:17:1: note: candidate: DAL::Reference<Type>::Reference(DAL::ILoader<Type>*) [with Type = int]
 Reference<Type>::Reference(ILoader<Type> * loader){
 ^
./example/../include/Reference.cpp:17:1: note:   candidate expects 1 argument, 0 provided
makefile:25: polecenia dla obiektu 'bin/simple2.out' nie powiodły się
make[1]: *** [bin/simple2.out] Błąd 1
makefile:22: polecenia dla obiektu 'main-build' nie powiodły się
make: *** [main-build] Błąd 2
